--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -579,6 +579,10 @@ body {
 
 .unclickable {
   pointer-events: none !important;
+  overflow: hidden !important;
+}
+.unclickable .navbar__dropdown {
+  height: 0 !important;
 }
 
 .transparent {
@@ -596,7 +600,6 @@ body {
     overflow: visible !important;
   }
 }
-
 .overflow--hidden:not(.navbar--active, .navbar--isAnimating) {
   overflow: visible !important;
 }
